--- a/_posts/2022-02-21-java-type.md
+++ b/_posts/2022-02-21-java-type.md
@@ -2,6 +2,7 @@
 layout: post
 title: "원시타입과 참조타입"
 date: 2022-02-21 23:11:00 +0530
+excerpt: "원시타입과 참조타입은 무엇일까?"
 categories: Java
 ---
 
@@ -13,7 +14,7 @@ categories: Java
 
 ### 원시 타입(Primitive Type)
 
-![이미지](https://user-images.githubusercontent.com/95040138/153741711-e64e5e65-4f30-482f-a488-5047cd6ec758.png)
+![이미지](https://raw.githubusercontent.com/wlroh/wlroh.github.io/main/assets/images/2022-02-21-java-type-2.png)
 
 ### 참조 타입(Reference Type)
 
@@ -94,7 +95,7 @@ List<Integer> list;
 
 ### 1. 접근 속도
 
-![원시타입 장점](https://user-images.githubusercontent.com/95040138/153742814-d72b9f7e-275c-486e-966d-98067c7fb758.png)
+![원시타입 장점](https://raw.githubusercontent.com/wlroh/wlroh.github.io/main/assets/images/2022-02-21-java-type-1.png)
 
 **원시 타입은** `'스택' 메모리`**에 값이 존재한다.**
 
